--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -3,3 +3,4 @@ distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.4.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+rebelAgent=-agentpath:C:\\Users\\young\\AppData\\Roaming\\JetBrains\\IntelliJIdea2021.3\\plugins\\jr-ide-idea\\lib\\jrebel6\\lib\\jrebel64.dll
