--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,16 @@
+
 plugins {
     id 'org.springframework.boot' version '2.6.6'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-}
 
+}
 group = 'jpabook'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
-
+if (project.hasProperty('rebelAgent')) {
+    bootRun.jvmArgs += rebelAgent
+}
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -23,6 +26,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'junit:junit:4.13.1'
+    //이건 테스트나 개발할 땐 괜찮지만 배포할 때 성능 테스트는 꼭 해봐야 한다. 받아들일만 하면 쓰기
+    implementation 'com.github.gavlyukovskiy:flexy-pool-spring-boot-starter:1.8.0'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
