--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
+      #스프링부트는 기본적으로 create-drop으로 들어간다.
+      #create는 내가 가지고 있는 엔티티 다 drop하고 다시 create한다음에 애플리케이션을 실행시킨다.
+      #create-drop은 똑같은데 마지막에 애플리케이션 종료시점에 다시 drop table를 호출해서 깨끗하게 초기화한다.
       ddl-auto: create
     properties:
       hibernate:
