--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,15 +6,15 @@ spring:
 #    username: sa
 #    password:
 #    driver-class-name: org.h2.Driver
-#  jpa:
+  jpa:
 #    hibernate:
 #      ddl-auto: create
 #    properties:
 #      hibernate:
 ##        show-sql: true
 #        format_sql: true
-#    thymeleaf:
-#      cache: false
+    thymeleaf:
+      cache: false
 
 logging:
   level:
