--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       #create는 내가 가지고 있는 엔티티 다 drop하고 다시 create한다음에 애플리케이션을 실행시킨다.
       #create-drop은 똑같은데 마지막에 애플리케이션 종료시점에 다시 drop table를 호출해서 깨끗하게 초기화한다.
       #none으로 하면 데이터베이스를 초기화 안 하고 그대로 쓸 수 있다.
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         show-sql: true
